<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/black"
    android:fitsSystemWindows="true">

    <VideoView
        android:id="@+id/video_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_vertical"/>

    <LinearLayout
        android:id="@+id/video_reload_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_gravity="center"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_reload"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_2"
            android:text="@string/video_reload"
            android:textColor="@color/bullet_bt_white"/>
    </LinearLayout>

    <!-- portrait bottom bar -->
    <LinearLayout
        android:id="@+id/bottom_controller_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_bar_height"
        android:layout_gravity="bottom"
        android:background="#44888888"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">

        <Button
            android:id="@+id/play_pause_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="14dp"
            android:background="@android:drawable/ic_media_play" />

        <LinearLayout
            android:id="@+id/seek_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:id="@+id/current_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:text="@string/default_current_time"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <SeekBar
                android:id="@+id/seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:progressDrawable="@drawable/media_progress_bg"
                android:thumb="@mipmap/scrubber_control_focused_holo" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:text="@string/default_total_time"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <Button
            android:id="@+id/full_screen_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="14dp"
            android:background="@mipmap/icon_fullscreen" />
    </LinearLayout>

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleInverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

</FrameLayout>