<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="sg.com.conversant.swiftplayer.activity.MyProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center"
            android:background="?attr/colorPrimary"
            android:gravity="center"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/title_left"
                    style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/bottom_navi_category" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/default_padding_2"
                    android:layout_marginBottom="@dimen/default_padding_2">

                    <TextView
                        android:id="@+id/tab_recommend"
                        android:layout_width="@dimen/tab_width"
                        android:layout_height="match_parent"
                        android:text="@string/tab_recommend"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size_2"
                        android:gravity="center"
                        android:background="@drawable/tab_left_bg"/>

                    <TextView
                        android:id="@+id/tab_filter"
                        android:layout_width="@dimen/tab_width"
                        android:layout_height="match_parent"
                        android:text="@string/tab_filter"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size_2"
                        android:gravity="center"
                        android:background="@drawable/tab_right_bg"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/title_right"
                    style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/bottom_navi_category"
                    android:visibility="invisible"/>

                <ImageView
                    android:id="@+id/search_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/main_search_bg"
                    android:layout_margin="@dimen/default_padding_2"/>

            </LinearLayout>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:context=".activity.CategoryDetailActivity" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>