<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="sg.com.conversant.swiftplayer.activity.MyProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center"
            android:background="?attr/colorPrimary"
            android:gravity="center"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/title"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginRight="?attr/actionBarSize"
                android:gravity="left"
                android:text="@string/my_profile_title" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/my_profile_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_padding_1"
                    android:background="@drawable/card_style_bg"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/default_padding_3"
                    android:paddingLeft="@dimen/default_padding_2"
                    android:paddingRight="@dimen/default_padding_2"
                    android:paddingTop="@dimen/default_padding_3">

                    <com.facebook.drawee.view.SimpleDraweeView
                        android:id="@+id/avatar_view"
                        fresco:actualImageScaleType="focusCrop"
                        fresco:backgroundImage="@mipmap/ic_avatar_light"
                        fresco:fadeDuration="300"
                        fresco:failureImage="@mipmap/ic_avatar_light"
                        fresco:failureImageScaleType="focusCrop"
                        fresco:placeholderImage="@mipmap/ic_avatar_light"
                        fresco:placeholderImageScaleType="focusCrop"
                        fresco:roundAsCircle="true"
                        android:layout_width="@dimen/avatar_width_large"
                        android:layout_height="@dimen/avatar_height_large" />

                    <TextView
                        android:id="@+id/login_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/default_padding_2"
                        android:layout_weight="1"
                        android:text="@string/my_login_prompt"
                        android:textColor="@color/black_dark"
                        android:textSize="@dimen/text_size_2" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/change_password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_view_height"
                    android:background="@drawable/card_style_bg"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/default_padding_2"
                    android:paddingRight="@dimen/default_padding_2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/change_password"
                        android:textColor="@color/black_dark"
                        android:textSize="@dimen/text_size_2" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/default_padding_2"
                        android:src="@mipmap/ic_arrow_right" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/logout_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_view_height"
                    android:background="@drawable/card_style_bg"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/default_padding_2"
                    android:paddingRight="@dimen/default_padding_2">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/logout"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="@dimen/text_size_2"
                        android:gravity="center"/>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleInverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />
    </FrameLayout>
</android.support.design.widget.CoordinatorLayout>