<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- title bar -->
    <LinearLayout
        android:id="@+id/title_info_layout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_height"
        android:layout_alignParentTop="true"
        android:background="#44888888"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dip"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:textColor="#ffffffff" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/video_close"
                android:layout_width="@dimen/main_title_button_width"
                android:layout_height="@dimen/player_icon_size"
                android:layout_marginRight="@dimen/default_padding"
                android:scaleType="centerInside"
                android:src="@drawable/player_cancel_bg" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/video_reload_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_reload"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_2"
            android:text="@string/video_reload"
            android:textColor="@color/bullet_bt_white"/>
    </LinearLayout>

    <!-- portrait bottom bar -->
    <LinearLayout
        android:id="@+id/bottom_controller_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_bar_height"
        android:layout_alignParentBottom="true"
        android:background="#44888888"
        android:orientation="horizontal">

        <Button
            android:id="@+id/play_pause_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="14dp"
            android:background="@android:drawable/ic_media_play" />

        <LinearLayout
            android:id="@+id/seek_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:id="@+id/current_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:text="@string/default_current_time"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <SeekBar
                android:id="@+id/seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:progressDrawable="@drawable/media_progress_bg"
                android:thumb="@mipmap/scrubber_control_focused_holo" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:text="@string/default_total_time"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageView android:id="@+id/bullet_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_player_landscape_spitslot_normal"
            android:layout_gravity="center_vertical"/>

        <Button
            android:id="@+id/full_screen_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="14dp"
            android:background="@mipmap/icon_fullscreen" />
    </LinearLayout>


</RelativeLayout>